--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,27 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.norcode.bukkit.schematica</groupId>
   <artifactId>Schematica</artifactId>
-  <version>0.1.5</version>
+  <version>0.1.6</version>
   <name>Schematica</name>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   <repositories>    
     <repository>
       <id>bukkit-releases-repo</id>
