--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.norcode.bukkit.schematica</groupId>
   <artifactId>Schematica</artifactId>
-  <version>0.1.6</version>
+  <version>0.1.7-SNAPSHOT</version>
   <name>Schematica</name>
     <build>
         <resources>
@@ -26,14 +26,14 @@
   <repositories>    
     <repository>
       <id>bukkit-releases-repo</id>
-      <url>http://repo.bukkit.org/content/repositories/releases/</url>
+      <url>http://repo.bukkit.org/content/repositories/snapshots/</url>
     </repository>
   </repositories>
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
         <artifactId>craftbukkit</artifactId>
-        <version>1.5.2-R1.0</version>
+        <version>1.6.1-R0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
         <groupId>junit</groupId>
